--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "primeflex": "^3.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.5"
   }
 }
