--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
+    "prd": "gatsby build && gatsby serve",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -32,6 +33,7 @@
     "primeflex": "^3.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.5"
   }
