--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.21.1",
+    "gatsby-cli": "^4.24.0",
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
@@ -35,7 +37,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-vertical-timeline-component": "^3.5.2",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5"
   }
 }
