--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-vertical-timeline-component": "^3.5.2",
+    "react-world-flags": "^1.5.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5"
   }
