--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-styled-components": "^5.21.0",
     "gatsby-source-filesystem": "^4.21.1",
     "gatsby-transformer-sharp": "^4.21.0",
+    "html-react-parser": "^4.2.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "primeflex": "^3.2.1",
